--- a/app/src/main/res/layout/fragment_memory_main.xml
+++ b/app/src/main/res/layout/fragment_memory_main.xml
@@ -6,7 +6,41 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MemoryMainActivity$PlaceholderFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:background="@drawable/Arryn" />
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/button2"
+                android:background="@drawable/Arryn" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="188dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/button3"
+                android:background="@drawable/Arryn" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
